	* Gonryunn Quests - 0% - Botting on official Servers
	* Artifacts of God (MRO GOD ITEM QUESTS) - 1% - resources only from MRO Official
	  guide book so, probably unofficial
MasterOfMuppets
	* Working on The Sign Quest atm.
	* Updating Items / Scripts
Nexon
	* Adding in the new Abyss/Thanatos/Lighthalzen NPC's and optimizing them.

== Changelog ==

Date		Added
======
03/11
	* Added another weapon dealer to Einbroch, thanks to Muad_Dib [MasterOfMuppets]
	* Updated, fixed Custom Thanatos Statues Quest, thx2Justin84 for help [Lupus]
03/10
	* Fixed Turtle Island quest, got rid of 2 useless variables [Lupus]
	* Added 3 Weapon shops, thanks to Muad_Dib. Still need SPRITES ID [Lupus]
		^^^^^ could we just add spr ID's into CONST.txt?
03/07
	* Fixed some reference to old locations of the Blacksmith NPC's, Thanks to Neouni. [Poki#3]
03/06
	* Fixed Thanatos warps: tha_t06,tha_t06a,tha_t06b,tha_t05a thanks to Justin84 [Lupus]
	- Added Temp Thanatos Keys solution (more close to official than that Thanatos Statues Quest)
03/05
	* Used "Laboratory Passport" everywhere in the cube room quest, else how can ppl guess the name? xD [DracoRPG]
03/02
	* Added Skotlex's updated marriage script [Vicious]
	* Added eACC scripts, thanks to davidchak [Vicious]
02/27
	* Fixed a flag direction in front of Yesnelph, thanks to Playtester [DracoRPG]
	* Fixed wrong Female Thief Bug spawns in Culvert, thanks to happylight [DracoRPG]
	* Fixed a typo in Assassin job change test, thanks to Spiritual_Kid [DracoRPG]
02/26
	* Splitted 2nd job skills quests into several files and fixed grammar [DracoRPG]
	* Rewrote the repairmen function and removed the Steel cost [DracoRPG]
02/23
	* Fixed item name in Cube Room Quest. [Poki#3]
	* Changed Light Dun Spawn numbers a bit (Gemini is a Mini-boss) [Poki#3]
	* Changed "Virus" to "Anopheles" [Poki#3]
02/21
	* Fixed wrong indication of Repairsman, thanks to NeoSaro [Lupus]
02/17