@@ -1,0 +1,34 @@
+===== Athena Script ========================================
+= Donation NPC						   =
+===== By ===================================================
+= Josh							   =
+===== Version ==============================================
+= 1.0 - First release. Probably contains bugs/security	   =
+=	risks						   =
+= 1.1 - Added a check for whether the account exists when  =
+=	adding a donator. Need to improve ordering when	   =
+=	viewing all donations.				   =
+= 1.2 - Modified for public use. Added checkweight feature.=
+= 2.0 - Many changes, especially ones I had always wanted  =
+=	to add to this script. Includes reading items from =
+=	a separate sql table and more database manipulation=
+=	options for GMs.				   =
+= 2.1 - Made few changes including the add/remove items	   =
+=	feature.					   =
+===== Compatible With ======================================
+= eAthena - any version that contains the sql_query	   =
+=	    function (4368)				   =
+===== Description ==========================================
+= A script that lets a player claim an item for donating.  =
+= Allows a GM to input each donation.			   =
+===== Comments =============================================
+= This script uses an sql table (donate) to store 	   =
+= variables for the amount donated by a user.		   =
+===== Installation =========================================
+= You must execute donate.sql and donate_item_db.sql before=
+= using this script.					   =
+============================================================
+= Thanks to Vich for helping me with the SQL syntax.	   =
+= Thanks to Lance for helping me with the the arrays and   =
+= for implementing this feature. XD			   =
+============================================================
