@@ -65,3 +65,10 @@
 // Forum topic for support:
 //| http://www.eathena.ws/board/index.php?showtopic=75283
 //npc: npc/custom/eAAC_Scripts/clonearena.txt
+
+// --------------------------------------------------------------
+// ---------------------- Donation Girl -------------------------
+// Script made by joshuaali
+// Forum topic for support:
+//| http://www.eathena.ws/board/index.php?showtopic=71464
+//npc: npc/custom/eAAC_Scripts/DonationGirl/donate.txt
